# navitab

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
apps/: CMakeLists.txt
apps/console/: CMakeLists.txt  main.cpp
apps/desktop/: CMakeLists.txt  main.cpp  win32main.cpp
apps/gui/desktop/: CMakeLists.txt  main.cpp  win32main.cpp
apps/msfs/: CMakeLists.txt
apps/msfs/panel/: CMakeLists.txt
apps/msfs/server/: CMakeLists.txt
apps/navdb/: CMakeLists.txt  main.cpp
apps/navdb/builder/: CMakeLists.txt
apps/plugin/: CMakeLists.txt
apps/plugin/xplane/: CMakeLists.txt  plugin.cpp
apps/sandbox/: CMakeLists.txt  sandbox.cpp  sandbox.slint
apps/tool/: CMakeLists.txt
apps/tool/mock/: CMakeLists.txt  main.cpp
apps/tool/msfs/: CMakeLists.txt  main.cpp
apps/tool/simstub/: CMakeLists.txt
apps/tool/svgc/: CMakeLists.txt  main.cpp
apps/tools/: CMakeLists.txt
apps/tools/navdb/: main.cpp
apps/xplane/: CMakeLists.txt
apps/xplane/plugin/: CMakeLists.txt  plugin.cpp
cmake/: Downloader.cmake  ImportExport.cmake  Importer.cmake  Prefixer.cmake
docs/: CMakeLists.txt  INSTALLATION.md
include/navitab/: callback.h  core.h  deferred.h  doodlepad.h  doodler.h  drivers.h  geometrics.h  keypad.h  logger.h  logging.h  modebar.h  navdata.h  navigation.h  platform.h  prefs.h  simulator.h  tiles.h  toolbar.h  window.h  xpplugin.h  xpsimulator.h
include/navitab/sim/: simulator.h  xpsimulator.h
include/navitab/win/: window.h
res/: CMakeLists.txt
res/svg/: CMakeLists.txt
scripts/: README.md  devenv_setup.sh
shells/gui/desktop/: main.cpp
shells/plugin/xplane/: CMakeLists.txt
shells/tool/: CMakeLists.txt
shells/tool/navdb/: CMakeLists.txt
shells/tool/svgc/: CMakeLists.txt
shells/tool/web/: CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  config.h.in
src/apps/: CMakeLists.txt  app.cpp  app.h
src/apps/about/: CMakeLists.txt  aboutapp.cpp  aboutapp.h
src/apps/airport/: CMakeLists.txt  airportapp.cpp  airportapp.h
src/apps/map/: CMakeLists.txt  mapapp.cpp  mapapp.h
src/apps/reader/: CMakeLists.txt  readerapp.cpp  readerapp.h
src/apps/route/: CMakeLists.txt  routeapp.cpp  routeapp.h
src/apps/settings/: CMakeLists.txt  settingsapp.cpp  settingsapp.h
src/charts/: CMakeLists.txt  charts.cpp
src/core/: CMakeLists.txt  appcanvas.cpp  appcanvas.h  canvas.cpp  canvas.h  coredoodler.cpp  coredoodler.h  corekeypad.cpp  corekeypad.h  coremodebar.cpp  coremodebar.h  coretoolbar.cpp  coretoolbar.h  geometrics.cpp  httpdoodler.cpp  httpdoodler.h  httpkeypad.cpp  httpkeypad.h  httpmodebar.cpp  httpmodebar.h  httptoolbar.cpp  httptoolbar.h  logger.cpp  logmanager.cpp  logmanager.h  navitab.cpp  navitab.h  prefs.cpp  prefs.h  prefsmgr.cpp  prefsmgr.h  settingsmgr.cpp  settingsmgr.h  sim.cpp  subsystems.cpp
src/docs/: CMakeLists.txt  docmanager.cpp  docmanager.h  docs.h  docsprovider.cpp  document.cpp  document.h  downloader.cpp  downloader.h
src/imgkit/: CMakeLists.txt  imgkit.cpp  imgkit.h  pixelbuffer.cpp  rasterizer.cpp  rasterizer.h
src/lvglcpp/: CMakeLists.txt
src/lvglkit/: CMakeLists.txt  display.cpp  display.h  toolkit.cpp  toolkit.h
src/maps/: CMakeLists.txt  maps.h  mapsprovider.cpp  maptileprovider.cpp  maptileprovider.h  tileprovidercfg.cpp  tileprovidercfg.h
src/nav/: CMakeLists.txt  nav.h  navprovider.cpp
src/navdb/: CMakeLists.txt  navdb.h  navprovider.cpp
src/panel/: CMakeLists.txt  build.sh  build_spb.bat  index.html  navitab.css
src/panel/html/: NavitabPanel.css.hpp  NavitabPanel.html  NavitabPanel.html.hpp  NavitabPanel.js.hpp  NavitabProtocol.js.hpp  index.html
src/panel/html_ui/InGamePanels/Navitab/: NavitabPanel.css  NavitabPanel.js
src/panel/spb/: mjh65-ingamepanels-navitab.xml  navitab-ingamepanels-navitab.xml
src/panel/spb/PackageDefinitions/: mjh65-ingamepanels-navitab.xml  navitab-ingamepanels-navitab.xml
src/panel/spb/PackageSources/: mjh65-ingamepanels-navitab.xml  navitab-ingamepanels-navitab.xml
src/platform/: CMakeLists.txt  paths.cpp  paths.h  platform.cpp  win32main.cpp
src/screens/: CMakeLists.txt
src/screens/settings/: CMakeLists.txt
src/shells/: CMakeLists.txt
src/shells/gui/: CMakeLists.txt
src/shells/gui/desktop/: CMakeLists.txt  main.cpp
src/shells/gui/msfs/: CMakeLists.txt  main.cpp
src/shells/plugin/: CMakeLists.txt
src/shells/plugin/msfs/: CMakeLists.txt
src/shells/plugin/xplane/: CMakeLists.txt  plugin.cpp
src/shells/tool/: CMakeLists.txt
src/shells/tool/msfs/: CMakeLists.txt  main.cpp
src/shells/tool/navdb/: CMakeLists.txt  bglairport.cpp  bglairport.h  bglfilereader.cpp  bglfilereader.h  bglfilestream.cpp  bglfilestream.h  bglnamelist.cpp  bglnamelist.h  bglnavaid.cpp  bglnavaid.h  bglnavdata.cpp  bglnavdata.h  bglwaypoint.cpp  bglwaypoint.h  main.cpp  sceneryreader.cpp  sceneryreader.h
src/shells/tool/svgc/: CMakeLists.txt  main.cpp
src/shells/tool/web/: CMakeLists.txt  main.cpp
src/sim/: CMakeLists.txt
src/sim/mock/: CMakeLists.txt  mocksim.cpp  mocksim.h  simmock.cpp  simmock.h
src/sim/msfs/: CMakeLists.txt  msfssim.cpp  msfssim.h  simmsfs.cpp  simmsfs.h
src/sim/xplane/: CMakeLists.txt  datarefimport.cpp  simxp.cpp  simxp.h  xpcommon.h  xpdesktopwin.cpp  xpdesktopwin.h  xplanewindow.cpp  xplanewindow.h  xpsimenvoy.cpp  xpsimenvoy.h  xpvrwin.cpp  xpvrwin.h  xpwin.cpp  xpwin.h
src/simxp/: CMakeLists.txt  datarefexport.cpp
src/store/: CMakeLists.txt  backingstore.cpp  backingstore.h
src/win/: CMakeLists.txt  imagerect.cpp  imagerect.h  otdpeninput.cpp  otdpeninput.h  texbuffer.cpp  texbuffer.h
src/win/glfw/: CMakeLists.txt  winglfw.cpp  winglfw.h
src/win/http/: CMakeLists.txt  cmdhandler.cpp  cmdhandler.h  htmlserver.cpp  htmlserver.h  httpreq.cpp  httpreq.h  imageserver.cpp  imageserver.h  protocol.cpp  protocol.h  winhttp.cpp  winhttp.h
src/win/msfs/: CMakeLists.txt  winmsfs.cpp  winmsfs.h
src/win/xplane/: CMakeLists.txt  README.md  xpdesktopwin.cpp  xpdesktopwin.h  xpvrwin.cpp  xpvrwin.h  xpwin.cpp  xpwin.h
tests/: CMakeLists.txt
